<resources>
    <string name="app_name">Twitch</string>
    <string name="username">Username</string>
    <string name="labelLog_in">Log In</string>
    <string name="btnLog_in">Log In</string>
    <string name="password">Password</string>
    <string name="trouble_logging_in">Trouble logging in?</string>
    <string name="log_in">Log in</string>
    <string name="btnSignUp">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="text_view" translatable="false">Text view</string>
    <string name="verify">You´ll need to verify that you own this email account</string>
    <string name="use_phone">Use phone instead</string>
    <string name="labelEmail" translatable="false">Email</string>
    <string name="title_activity_test" translatable="false">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="favorites">Favorites</string>
    <string name="discover">Discover</string>
    <string name="browse">Browse</string>
    <string name="security">Security</string>
    <string name="configuration">Configuration</string>
    <string name="privacy">Privacy</string>
    <string name="recommended_categories">Recommended categories</string>
    <string name="recommended_just_chatting_channels">Recommended Just Chatting Channels</string>
    <string name="browseTitle">Browse</string>
    <string name="my_favorites_channels">My favorites channels</string>
    <string name="social">Social</string>
    <string name="whispers">whispers</string>
    <string name="friends">Friends</string>
    <string name="add_friends">Add friends</string>
    <string name="twitch_is_better_with_friends">Twitch is better with friends</string>


</resources>