<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="password"
        android:background="@drawable/input_field"
        android:ems="10"

        android:imeActionLabel="Done"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:singleLine="false"
        android:textColorHint="#FFFFFF"
        android:textCursorDrawable="@drawable/cursor"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:textColorHint="#272727"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldUsername" />

    <TextView
        android:id="@+id/labelRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/trouble_logging_in"
        android:textColorHint="@color/purple_500"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldPassword"

        />

    <EditText
        android:id="@+id/fieldUsername"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"

        android:background="@drawable/input_field"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:singleLine="false"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:imeOptions="actionNext"

        android:imeActionLabel="Next"
        android:autofillHints="username" />


    <TextView
        android:id="@+id/labelLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/log_in"
        android:textColorHint="#272727"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:hint="@string/username"
        android:textColorHint="#272727"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/btnLog_in"
        android:textAllCaps="false"
        android:textColor="@drawable/login_text_color"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/fieldPassword"
        app:layout_constraintStart_toStartOf="@+id/fieldPassword"
        app:layout_constraintTop_toBottomOf="@+id/labelRegistrar" />

    <Button
        android:id="@+id/btnSignUpLog"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:enabled="true"
        android:hint="@string/sign_up"
        android:textColorHint="#FFFFFF"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/fieldPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fieldPassword"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>
